Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@ JUST👇🏼NEW!
 <p>         
 </p>   
 
+ <a href="http://123.vitaforas.de/ich1.mp4">
+<img src="i1.jpg" alt="1899" width="100%%" height="auto" name="ich2"></a>
+
+<p>         
+</p>   
+
  <a href="http://123.vitaforas.de/minions2.mp4">
 <img src="minions2.jpg" alt="26" width="45%" height="auto" name="ich2"></a>
 
@@ -118,6 +124,8 @@ JUST👇🏼NEW!
  <a href="http://123.vitaforas.de/minions.mp4">
 <img src="minions.jpg" alt="26" width="30%" height="auto" name="minions1"></a>
  
+ <a href="http://123.vitaforas.de/m2.mp4">
+<img src="m2.jpg" alt="26" width="30%" height="auto" name="minions2"></a>
 
 <p>          </p>    
 
