Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@ JUST👇🏼NEW!
  <a href="http://123.vitaforas.de/m2.mp4">
 <img src="m2.jpg" alt="26" width="30%" height="auto" name="minions2"></a>
 
+ <a href="http://123.vitaforas.de/more2.mp4">
+<img src="more2.jpg" alt="26" width="30%" height="auto" name="minions2"></a>
+
 <p>          </p>    
 
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Godzilla.mp4">
