Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ JUST👇🏼NEW!
 </p>   
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="i1.png" alt="1899" width="100%%" height="auto" name="ich2"></a>
+<img src="i1.png" alt="199" width=70%" height="auto" name="ich2"></a>
 
 <p>         
 </p>   
