Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ JUST👇🏼NEW!
 <img src="m2.jpg" alt="26" width="30%" height="auto" name="minions2"></a>
 
  <a href="http://123.vitaforas.de/more2.mp4">
-<img src="more2.jpg" alt="26" width="30%" height="auto" name="minions2"></a>
+<img src="more2.jpg" alt="26" width="30%" height="auto" name="Minions&more2"></a>
 
 <p>          </p>    
 
