--- a/index.html
+++ b/index.html
@@ -130,6 +130,24 @@ JUST👇🏼NEW!
  <a href="http://123.vitaforas.de/more2.mp4">
 <img src="more2.jpg" alt="26" width="30%" height="auto" name="Minions&more2"></a>
 
+<p>          </p>  
+
+ <a href="http://123.vitaforas.de/hb.mp4">
+<img src="hb.jpg" alt="26" width="30%" height="auto" name="half baked"></a>
+
+<p>          </p>  
+
+ <a href="http://123.vitaforas.de/high.mp4">
+<img src="high.jpg" alt="26" width="30%" height="auto" name="how high"></a>
+
+<p>          </p>  
+
+ <a href="http://123.vitaforas.de/high2.mp4">
+<img src="h2.jpg" alt="26" width="30%" height="auto" name="how high 2"></a>
+
+<p>          </p>  
+
+
 <p>          </p>    
 
 <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/Godzilla.mp4">
