Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/Borderlands.mp4">
-<img src="Borderlands.jpg" alt="26" width="100%" height="auto" name="mad_max_furiosa"></a>
+<img src="Borderlands.jpg" alt="26" width="100%" height="auto" name="Borderlands"></a>
 
 
 <p>         
@@ -133,15 +133,16 @@ JUST👇🏼NEW!
 <p>          </p>  
 
  <a href="http://123.vitaforas.de/hb.mp4">
-<img src="hb.jpg" alt="26" width="30%" height="auto" name="half baked"></a>
+<img src="hb.jpg" alt="26" width="100%" height="auto" name="half baked"></a>
   
+<p>          </p> 
 
  <a href="http://123.vitaforas.de/high.mp4">
-<img src="high.jpg" alt="26" width="30%" height="auto" name="how high"></a>
+<img src="high.jpg" alt="26" width="45%" height="auto" name="how high"></a>
 
 
  <a href="http://123.vitaforas.de/high2.mp4">
-<img src="h2.jpg" alt="26" width="30%" height="auto" name="how high 2"></a>
+<img src="h2.jpg" alt="26" width="45%" height="auto" name="how high 2"></a>
 
 <p>          </p>  
 
