Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ich4.mp4">
-<img src="https://123.vitaforas.de/ich4.jpg" alt="ich" width="100%" height="auto"></a>
+<img src="i4.jpg" alt="ich" width="100%" height="auto"></a>
 
 
 <p>         
