--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ JUST👇🏼NEW!
 <p>          </p>  
 
  <a href="http://123.vitaforas.de/more1.mp4">
-<img src="more1.jpg" alt="876" width="45%" height="auto" name="Minions&more1"></a>
+<img src="more1.png" alt="876" width="45%" height="auto" name="Minions&more1"></a>
 
  <a href="http://123.vitaforas.de/more2.mp4">
 <img src="more2.jpg" alt="286" width="45%" height="auto" name="Minions&more2"></a>
