Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ JUST👇🏼NEW!
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/Borderlands.mp4">
-<img src="Borderlands.jpg" alt="26" width="100%" height="auto" name="Borderlands"></a>
+<img src="Borderlands.jpg" alt="borderlands" width="100%" height="auto" name="Borderlands"></a>
 
 
  <p>
@@ -126,48 +126,48 @@ __________
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/furiosa.mp4">
-<img src="furiosa.jpg" alt="26" width="100%" height="auto" name="mad_max_furiosa"></a>
+<img src="furiosa.jpg" alt="furiosa" width="100%" height="auto" name="mad_max_furiosa"></a>
 
 <p>         
 </p>   
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="i1.png" alt="199" width=100%" height="auto" name="ich1"></a>
+<img src="i1.png" alt="ich 1" width=100%" height="auto" name="ich1"></a>
 
 <p>         
 </p>   
 
  <a href="http://123.vitaforas.de/minions2.mp4">
-<img src="minions2.jpg" alt="26" width="45%" height="auto" name="ich2"></a>
+<img src="minions2.jpg" alt="ich 2" width="45%" height="auto" name="ich2"></a>
 
  <a href="http://123.vitaforas.de/minions3.mp4">
-<img src="minions3.jpg" alt="26" width="45%" height="auto" name="ich3"></a>
+<img src="minions3.jpg" alt="ich 3" width="45%" height="auto" name="ich3"></a>
 
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ich4.mp4">
-<img src="i4.jpg" alt="ich" width="100%" height="auto"></a>
+<img src="i4.jpg" alt="ich 4" width="100%" height="auto"></a>
 
 
     <p>         </p>          <a href="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/panda4&#46;&#109;&#112;&#52;">
-<img src="p4.jpg" alt="26" width="100%" height="auto"></a>   
+<img src="p4.jpg" alt="panda" width="100%" height="auto"></a>   
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/minions.mp4">
-<img src="minions.jpg" alt="26" width="45%" height="auto" name="minions1"></a>
+<img src="minions.jpg" alt="26" width="45%" height="auto" name="minions 1"></a>
  
  <a href="http://123.vitaforas.de/m2.mp4">
-<img src="m2.jpg" alt="26" width="45%" height="auto" name="minions2"></a>
+<img src="m2.jpg" alt="26" width="45%" height="auto" name="minions 2"></a>
 
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ask2.mp4">
-<img src="https://123.vitaforas.de/ask2.jpg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/ask2.jpg" alt="ask" width="100%" height="auto"></a>
 
 <p>          </p>  
 
  <a href="http://123.vitaforas.de/more1.mp4">
-<img src="more1.png" alt="876" width="45%" height="auto" name="Minions&more1"></a>
+<img src="more1.png" alt="minions more 876" width="45%" height="auto" name="Minions&more1"></a>
 
  <a href="http://123.vitaforas.de/more2.mp4">
 <img src="more2.jpg" alt="286" width="45%" height="auto" name="Minions&more2"></a>
@@ -176,22 +176,22 @@ __________
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/garf.mp4">
-<img src="https://123.vitaforas.de/garf.jpeg" alt="26" width="100%" height="auto"></a>
+<img src="https://123.vitaforas.de/garf.jpeg" alt="Garfield" width="100%" height="auto"></a>
 
 
 <p>          </p> 
 
  <a href="http://123.vitaforas.de/high.mp4">
-<img src="high.jpg" alt="26" width="45%" height="auto" name="how high"></a>
+<img src="high.jpg" alt="how high" width="45%" height="auto" name="how high"></a>
 
 
  <a href="http://123.vitaforas.de/high2.mp4">
-<img src="h2.jpg" alt="26" width="45%" height="auto" name="how high 2"></a>
+<img src="h2.jpg" alt="how high 2" width="45%" height="auto" name="how high 2"></a>
 
 <p>          </p>  
 
  <a href="http://123.vitaforas.de/hb.mp4">
-<img src="hb.jpg" alt="26" width="100%" height="auto" name="half baked"></a>
+<img src="hb.jpg" alt="half baked" width="100%" height="auto" name="half baked"></a>
   
 
 <p>          </p>    
