Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ __________
 </p>   
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="i1.png" alt="ich 1" width=100%" height="auto" name="ich1"></a>
+<img src="einfach1" alt="ich 1" width=100%" height="auto" name="ich1"></a>
 
 <p>         
 </p>   
