--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 </p>
 <p>   Bessere Wahl:
 <a href="https://t.ly/-U5ed"> <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/TVbanner.jpg" alt="2" width="100%" height="auto"></a></p>  
+
+
+ <a href="
+https://5927421.igen.app">
+<img src="apple.jpg" alt="apple" width="100%" height="auto" name="apple"></a>
 __________
 <p>         </p>
 
