Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ __________
  
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="einfach1" alt="ich 1" width=100%" height="auto" name="ich1"></a>
+<img src="einfach1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
 
 <p>         
 </p>   
