Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@ Bester Browser 👇🏼 Alternativ 👇🏼
 
 <p>
 </p>
-<p>   Bessere Wahl:
-<a href="https://t.ly/-U5ed"> <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/TVbanner.jpg" alt="2" width="100%" height="auto"></a></p>  
+
+<p> </p>
+  Bessere Wahl:
+<a href="https://t.ly/-U5ed"> <img src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/TVbanner.jpg" alt="2" width="100%" height="auto"></a>  
 
 
  <a href="
