Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -1,50 +1,156 @@
-<!DOCTYPE HTML>
-<!--
-        Watch free @ StreamTV
--->
+<!DOCTYPE html>
 <html>
-        <head>
-                <title>Stream.📺</title>
-                <meta charset="utf-8" />
-                <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<meta name="robots" content="noindex">
-                <link rel="stylesheet" href="assets/css/main.css" />
-                <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-        </head>
-        <body class="is-preload">
+<html lang="en">
+
+
+<head>
+<meta charset="utf-8">
+
+
+<meta name="viewport" content="width=750">
+
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+<meta name="description" content="online streaming best netflix alternate for free watch cinema movie movies Kinofile frei kostenlos schauen ohne Werbung ohne Abo , login oder Account" />
 
 
 
 
-                <!-- Wrapper -->
-                        <div id="wrapper">
+<title>StreamTV | Official Website</title>
 
-                                <!-- Header -->
-                                        <header id="header">
-                                                <div class="logo">
-                                                        <span class="icon fa-gem"></span>
-                                                </div>
-                                                <div class="content">
-                                                        <div class="inner">
-                                                                <h1> </h1>
 
-<img src="StreamTV.png" alt="300" width="85%" height="auto">
 
-<p>
-Kein Abo, keine Werbung, just Watch !
-</p> 
+<body style="background-image: url('get.jpg'); background-size: cover; text-align: center;">
 
- <p>
-</p>
-                                                                                                                                         </div>
-                                                </div>
-                                                <nav>
-                                                        <ul>
-                                                                <li><a href="#intro">WATCH NOW!</a></li>
-                                                                <li><a href="#work">FSK 0</a></li>
-                                                                <li><a href="#about">FSK 18</a></li>
-                                                                <li><a href="#contact">Chroniken</a></li>
-                                                                <!--<li><a href="#elements">Elements</a></li>-->
-                                                        </ul>
-                                                </nav>
-                                        </header>
+
+<link rel="image_src" href="background.jpg" />
+<meta property="og:image" content="background.jpg" />
+<meta property="og:description" content="java! Lighter | Official" />
+<meta property="og:site_name" content="Official"/>
+<meta property="og:title" content="Official"/>
+<meta property="og:url" content="https://buy"/>
+
+
+    <style>
+        body {
+            background-image: url('background.jpg');
+            background-size: cover;
+            text-align: center;
+        }
+    </style>
+</head>
+_
+
+<body> 
+<div>
+
+<p></p>
+    </div>
+
+
+
+    <h1>  </h1>
+
+
+
+
+
+<div id="bottom">
+
+
+        <div id="menu">
+                        <div id="logo-dt">        <img src="java.png" alt="java! Lighter" width="343" height="auto"><br>        </div>
+
+
+<p>.</p>
+
+<p>.</p>
+
+<p>.</p>
+
+<p>.</p>
+
+
+<p>.</p>
+
+<p>.</p>
+
+<p>.</p>
+
+<p>.</p>
+
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+
+<p></p>
+<p>.</p>
+
+<p>.</p>
+
+<p>.</p>
+
+
+
+
+
+
+
+
+<p>.</p>
+
+<p>.</p>
+
+
+
+<p>.</p>
+
+<p>.</p>
+
+
+<p>.</p>
+
+<p>.</p>
+
+<p>.</p>
+
+
+<p>.</p>
+
+
+
+
+
+
+     <a href="https://www.instagram.com/" target="_blank" class="social"><img src="img/insta.png" alt="Instagram" width="24" height="28"></a>
+                <a href="https://www.facebook.com/" target="_blank" class="social"><img src="img/fb.png" alt="Facebook" width="22" height="28"></a>
+                <a href="https://play.spotify.com/artist/" target="_blank" class="social"><img src="img/spotify.png" alt="Spotify" width="28" height="28"></a>
+                <a href="https://twitter.com/" target="_blank" class="social"><img src="img/twitter.png" alt="Twitter" width="31" height="28"></a>
+                <a href="https://soundcloud.com/" target="_blank" class="social"><img src="img/soundcloud.png" alt="Soundcloud" width="48" height="28"></a>
+                <a href="https://www.youtube.com/user/" target="_blank" class="social"><img src="img/youtube.png" alt="Youtube" width="35" height="28"></a>
+                <br>
+
+                <div class="blue">
+
+                <a href="http://shop.de/" target="_blank" ><img src="img/merchandise.png" alt="Watch" width="131" height="20" class="link"></a>
+
+          <a href="https://www.facebook.com/events/" target="_blank" ><img src="img/schedule.png" alt="Free" width="94" height="20" class="link"></a>
+
+                <a href="mailto:kontakt@.de"><img src="img/booking.png" alt="@" width="92" height="20" class="link"></a>
+                        <a href="http://.de/vote" target="_blank"><img src="img/vote.png" alt="StreamTV" width="45" height="20" class="link"></a>
+        </div>
+                </div>
+</div>
+
+</body>
+</html>
