--- a/minions.html
+++ b/minions.html
@@ -21,7 +21,7 @@
 
 
 
-<body style="background-image: url('get.jpg'); background-size: cover; text-align: center;">
+<body style="background-image: url('minions.jpg'); background-size: cover; text-align: center;">
 
 
 <link rel="image_src" href="background.jpg" />
