Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -60,7 +60,7 @@ _
 
 
         <div id="menu">
-                        <div id="logo-dt">        <img src="java.png" alt="java! Lighter" width="343" height="auto"><br>        </div>
+                        <div id="logo-dt">        <img src="streamTV.png" alt="logo" width="343" height="auto"><br>        </div>
 
 
 <p>.</p>
