Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -62,23 +62,28 @@ _
         <div id="menu">
                         <div id="logo-dt">        <img src="StreamTV.png" alt="logo" width="343" height="auto"><br>        </div>
 
-
-<p>.</p>
-
-<p>.</p>
-
-<p>.</p>
-
-<p>.</p>
+<p>         
+</p>   
 
 
-<p>.</p>
+ <a href="http://123.vitaforas.de/ich1.mp4">
+<img src="einfach1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
 
-<p>.</p>
+<p>         
+</p>   
 
-<p>.</p>
+ <a href="http://123.vitaforas.de/minions2.mp4">
+<img src="minions2.jpg" alt="ich 2" width="45%" height="auto" name="ich2"></a>
 
-<p>.</p>
+ <a href="http://123.vitaforas.de/minions3.mp4">
+<img src="minions3.jpg" alt="ich 3" width="45%" height="auto" name="ich3"></a>
+
+<p>         
+</p>   
+ <a href="https://123.vitaforas.de/ich4.mp4">
+<img src="i4.jpg" alt="ich 4" width="100%" height="auto"></a>
+
+
 
 
 <p></p>
