Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -88,6 +88,17 @@ _
 
 <p></p>
 
+<p>         
+</p>   
+ <a href="http://123.vitaforas.de/minions.mp4">
+<img src="minions.jpg" alt="26" width="45%" height="auto" name="minions 1"></a>
+
+ <a href="http://123.vitaforas.de/m2.mp4">
+<img src="m2.jpg" alt="26" width="45%" height="auto" name="minions 2"></a>
+
+<p>         
+</p>   
+
 <p></p>
 
 <p></p>
