Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -108,6 +108,14 @@ _
 <p></p>
 
 <p></p>
+<p>          </p>  
+
+ <a href="http://123.vitaforas.de/more1.mp4">
+<img src="more1.png" alt="minions more 876" width="45%" height="auto" name="Minions&more1"></a>
+
+ <a href="http://123.vitaforas.de/more2.mp4">
+<img src="more2.jpg" alt="286" width="45%" height="auto" name="Minions&more2"></a>
+
 
 <p></p>
 <p>.</p>
