Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 
 
-<meta name="viewport" content="width=750">
+<meta name="viewport" content="width=100%">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -67,7 +67,7 @@ _
 
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="einfach1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
+<img src="einfach1.jpg" alt="ich 1" width=50px" height="auto" name="ich1"></a>
 
 <p>         
 </p>   
