Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -118,41 +118,8 @@ _
 
 
 <p></p>
-<p>.</p>
 
-<p>.</p>
-
-<p>.</p>
-
-
-
-
-
-
-
-
-<p>.</p>
-
-<p>.</p>
-
-
-
-<p>.</p>
-
-<p>.</p>
-
-
-<p>.</p>
-
-<p>.</p>
-
-<p>.</p>
-
-
-<p>.</p>
-
-
-
+<img src="StreamTV.png" alt="300" width="85%" height="auto">
 
 
 
