--- a/minions.html
+++ b/minions.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 
 
-<meta name="viewport" content="width=100%">
+<meta name="viewport" content="width=750">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
