--- a/minions.html
+++ b/minions.html
@@ -66,7 +66,7 @@
 
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="einfach1.jpg" alt="ich 1" width=50px" height="auto" name="ich1"></a>
+<img src="einfach1.jpg" alt="ich 1" width=300" height="auto" name="ich1"></a>
 
 <p>         
 </p>   
