--- a/minions.html
+++ b/minions.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 
 
-<meta name="viewport" content="width=95%">
+<meta name="viewport" content="width=750">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -72,15 +72,15 @@
 </p>   
 
  <a href="http://123.vitaforas.de/minions2.mp4">
-<img src="minions2.jpg" alt="ich 2" width="45%" height="auto" name="ich2"></a>
+<img src="minions2.jpg" alt="ich 2" width="100" height="auto" name="ich2"></a>
 
  <a href="http://123.vitaforas.de/minions3.mp4">
-<img src="minions3.jpg" alt="ich 3" width="45%" height="auto" name="ich3"></a>
+<img src="minions3.jpg" alt="ich 3" width="100" height="auto" name="ich3"></a>
 
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ich4.mp4">
-<img src="i4.jpg" alt="ich 4" width="100%" height="auto"></a>
+<img src="i4.jpg" alt="ich 4" width="300" height="auto"></a>
 
 
 
@@ -90,10 +90,10 @@
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/minions.mp4">
-<img src="minions.jpg" alt="26" width="45%" height="auto" name="minions 1"></a>
+<img src="minions.jpg" alt="26" width="300" height="auto" name="minions 1"></a>
 
  <a href="http://123.vitaforas.de/m2.mp4">
-<img src="m2.jpg" alt="26" width="45%" height="auto" name="minions 2"></a>
+<img src="m2.jpg" alt="26" width="300" height="auto" name="minions 2"></a>
 
 <p>         
 </p>   
