--- a/minions.html
+++ b/minions.html
@@ -59,28 +59,28 @@
 
 
         <div id="menu">
-                        <div id="logo-dt">        <img src="StreamTV.png" alt="logo" width="343" height="auto"><br>        </div>
+                        <div id="logo-dt">        <img src="StreamTV.png" alt="logo" width="85%" height="auto"><br>        </div>
 
 <p>         
 </p>   
 
 
  <a href="http://123.vitaforas.de/ich1.mp4">
-<img src="einfach1.jpg" alt="ich 1" width=300" height="auto" name="ich1"></a>
+<img src="einfach1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
 
 <p>         
 </p>   
 
  <a href="http://123.vitaforas.de/minions2.mp4">
-<img src="minions2.jpg" alt="ich 2" width="100" height="auto" name="ich2"></a>
+<img src="minions2.jpg" alt="ich 2" width="45%" height="auto" name="ich2"></a>
 
  <a href="http://123.vitaforas.de/minions3.mp4">
-<img src="minions3.jpg" alt="ich 3" width="100" height="auto" name="ich3"></a>
+<img src="minions3.jpg" alt="ich 3" width="45%" height="auto" name="ich3"></a>
 
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ich4.mp4">
-<img src="i4.jpg" alt="ich 4" width="300" height="auto"></a>
+<img src="i4.jpg" alt="ich 4" width="100%" height="auto"></a>
 
 
 
@@ -90,10 +90,10 @@
 <p>         
 </p>   
  <a href="http://123.vitaforas.de/minions.mp4">
-<img src="minions.jpg" alt="26" width="300" height="auto" name="minions 1"></a>
+<img src="minions.jpg" alt="26" width="45%" height="auto" name="minions 1"></a>
 
  <a href="http://123.vitaforas.de/m2.mp4">
-<img src="m2.jpg" alt="26" width="300" height="auto" name="minions 2"></a>
+<img src="m2.jpg" alt="26" width="45%" height="auto" name="minions 2"></a>
 
 <p>         
 </p>   
