Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -52,14 +52,7 @@
     <h1>  </h1>
 
 
-
-
-
-<div id="bottom">
-
-
-        <div id="menu">
-                        <div id="logo-dt">        <img src="StreamTV.png" alt="logo" width="85%" height="auto"><br>        </div>
+       <img src="StreamTV.png" alt="logo" width="85%" height="auto"><br>        </div>
 
 <p>         
 </p>   
@@ -67,9 +60,6 @@
 
  <a href="http://123.vitaforas.de/ich1.mp4">
 <img src="einfach1.jpg" alt="ich 1" width=100%" height="auto" name="ich1"></a>
-
-<p>         
-</p>   
 
  <a href="http://123.vitaforas.de/minions2.mp4">
 <img src="minions2.jpg" alt="ich 2" width="45%" height="auto" name="ich2"></a>
@@ -85,10 +75,9 @@
 
 
 
-<p></p>
-
-<p>         
-</p>   
+<p>
+</p>
+   
  <a href="http://123.vitaforas.de/minions.mp4">
 <img src="minions.jpg" alt="26" width="45%" height="auto" name="minions 1"></a>
 
@@ -98,19 +87,11 @@
 <p>         
 </p>   
 
-<p></p>
-
-<p></p>
-
-<p></p>
-
-<p></p>
-
-<p></p>
-<p>          </p>  
+<p>          
+</p>  
 
  <a href="http://123.vitaforas.de/more1.mp4">
-<img src="more1.png" alt="minions more 876" width="45%" height="auto" name="Minions&more1"></a>
+<img src="more1.png" alt="minions&more" width="45%" height="auto" name="Minions&more1"></a>
 
  <a href="http://123.vitaforas.de/more2.mp4">
 <img src="more2.jpg" alt="286" width="45%" height="auto" name="Minions&more2"></a>
