Aktualisieren von minions.html

--- a/minions.html
+++ b/minions.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8">
 
 
-<meta name="viewport" content="width=auto">
+<meta name="viewport" content="width=750">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -24,7 +24,7 @@
 <body style="background-image: url('minions.jpg'); background-size: cover; text-align: center;">
 
 
-<link rel="image_src" href="background.jpg" />
+<link rel="image_src" href="i4.jpg" />
 <meta property="og:image" content="background.jpg" />
 <meta property="og:description" content="java! Lighter | Official" />
 <meta property="og:site_name" content="Official"/>
