--- a/minions.html
+++ b/minions.html
@@ -21,10 +21,10 @@
 
 
 
-<body style="background-image: url('minions.jpg'); background-size: cover; text-align: center;">
+<body style="background-image: url('i4.jpg'); background-size: cover; text-align: center;">
 
 
-<link rel="image_src" href="i4.jpg" />
+<link rel="image_src" href="background.jpg" />
 <meta property="og:image" content="background.jpg" />
 <meta property="og:description" content="java! Lighter | Official" />
 <meta property="og:site_name" content="Official"/>
