Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Kein Abo, keine Werbung, just Watch !
 
  <p>
 </p>
-<form action="http://nunana.site/suche" method="get">
+<form action="/suche" method="get">
     <input type="text" name="q" placeholder="Suche...">
     <button type="submit">Suchen</button>
 </form>
