Aktualisieren von suche.html

--- a/suche.html
+++ b/suche.html
@@ -7,15 +7,15 @@
 <body>
     <h1>Suchergebnisse</h1>
     
-"\<form action="minions.html">"
+'\<form action="minions.html">'
 
-"\<form action="howhigh.html">"
+'\<form action="howhigh.html">'
 
-"\<form action="halfbaked.html">"
+'\<form action="halfbaked.html">'
 
-"\<form action="minions.html">"
+'\<form action="minions.html">'
 
-"\<form action="minions.html">"
+'\<form action="minions.html">'
 
     <!-- Hier kannst du deine Suchergebnisse einfügen -->
     
