Aktualisieren von suche.html

--- a/suche.html
+++ b/suche.html
@@ -13,9 +13,9 @@
 
 '\<form action="halfbaked.html">'
 
-'\<form action="minions.html">'
+'\<form action="sci-fi.html">'
 
-'\<form action="minions.html">'
+'\<form action="horror.html">'
 
     <!-- Hier kannst du deine Suchergebnisse einfügen -->
     
