Aktualisieren von suche.html

--- a/suche.html
+++ b/suche.html
@@ -7,15 +7,14 @@
 <body>
     <h1>Suchergebnisse</h1>
     
-'\<form action="minions.html">'
+"\<form action="minions.html">"
 
-'\<form action="howhigh.html">'
+"\<form action="howhigh.html">"
+"\<form action="halfbaked.html">"
 
-'\<form action="halfbaked.html">'
+"\<form action="sci-fi.html">"
 
-'\<form action="sci-fi.html">'
-
-'\<form action="horror.html">'
+"\<form action="horror.html">"
 
     <!-- Hier kannst du deine Suchergebnisse einfügen -->
     
