--- a/index.html
+++ b/index.html
@@ -81,6 +81,26 @@ JUST👇🏼NEW!
 <img src="Borderlands.jpg" alt="borderlands" width="100%" height="auto" name="Borderlands"></a>
 
 
+
+
+
+<script>
+        var images = ['p1.jpg', 'p2.jpg', 'p3.jpg'];
+        var index = 0;
+        
+        function changeImage() {
+            var img = document.getElementById('dynamicImage');
+            img.src = images[index];
+            index = (index + 1) % images.length;
+        }
+    </script>
+</head>
+<body>
+    <a href="minions.html">
+        <img id="dynamicImage" src="bild1.jpg" onclick="changeImage()" />
+    </a>
+</body>
+
  <p>
 </p> 
 __________
