Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ JUST👇🏼NEW!
 
 
 <script>
-        var images = ['p1.jpg', 'p2.jpg', 'p3.jpg'];
+        var images = [p1.jpg, p2.jpg, p3.jpg];
         var index = 0;
         
         function changeImage() {
