--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ JUST👇🏼NEW!
 </head>
 <body>
     <a href="minions.html">
-        <img id="dynamicImage" src="bild1.jpg" onclick="changeImage()" />
+        <img id="dynamicImage" src="p1.jpg" onclick="changeImage()" />
     </a>
 </body>
 
