Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ JUST👇🏼NEW!
 
 
 <script>
-        var images = [p1.jpg, p2.jpg, p3.jpg];
+        var images = [furiosa.jpg, apple.jpg, furiosa.jpg];
         var index = 0;
         
         function changeImage() {
@@ -97,7 +97,7 @@ JUST👇🏼NEW!
 </head>
 <body>
     <a href="minions.html">
-        <img id="dynamicImage" src="p1.jpg" onclick="changeImage()" />
+        <img id="dynamicImage" src="furiosa.jpg" onclick="changeImage()" />
     </a>
 </body>
 
