Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ JUST👇🏼NEW!
 
 
 <script>
-        var images = [furiosa.jpg, apple.jpg, furiosa.jpg];
+        var images = [&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg, &#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p2.jpg, &#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p3.jpg];
         var index = 0;
         
         function changeImage() {
@@ -97,7 +97,7 @@ JUST👇🏼NEW!
 </head>
 <body>
     <a href="minions.html">
-        <img id="dynamicImage" src="furiosa.jpg" onclick="changeImage()" />
+        <img id="dynamicImage" src="&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg" onclick="changeImage()" />
     </a>
 </body>
 
