--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ JUST👇🏼NEW!
     
    
 <script>
-        var images = [&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg, &#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p2.jpg, &#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p3.jpg];
+        var images = ['&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p1.jpg', '&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p2.jpg', '&#104;&#116;&#116;&#112;&#115;&#58;&#47;&#47;&#49;&#50;&#51;&#46;&#118;&#105;&#116;&#97;&#102;&#111;&#114;&#97;&#115;&#46;&#100;&#101;/p3.jpg'];
         var index = 0;
         var imageElement = document.getElementById("slideshow");
         
