Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@ JUST👇🏼NEW!
 </head>
 
 <body>
-    <img id="slideshow" src="https://123.vitaföras.de/p1.jpg" onclick="changeImage()" />
+    <img id="slideshow" src="https://123.vitaforas.de/p1.jpg" onclick="changeImage()" />
 </body>
 
 <script>
-    var images = ['https://123.vitaföras.de/p1.jpg', 'https://123.vitaföras.de/p2.jpg', 'https://123.vitaföras.de/p3.jpg'];
+    var images = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/p3.jpg'];
     var currentIndex = 0;
     var imageElement = document.getElementById("slideshow");
 
