Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ JUST👇🏼NEW!
 </body>
 
 <script>
-    var images = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/p3.jpg'];
+    var images = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/d3.jpg'];
     var currentIndex = 0;
     var imageElement = document.getElementById("slideshow");
 
