--- a/index.html
+++ b/index.html
@@ -82,17 +82,50 @@ JUST👇🏼NEW!
 
 
 
+<p>         
+</p>   
 
 
         
        
 
+<head>
+    <style>
+        #slideshow {
+            width: 300px; /* Definiert die Breite des Bildes */
+            height: auto; /* Automatische Höhe basierend auf der Breite */
+        }
+    </style>
+</head>
+
+<body>
+    <a href="minions.html">
+        <img id="slideshow" src="https://123.vitaforas.de/p1.jpg" onclick="redirectToMinionsPage()" />
+    </a>
+</body>
+
+<script>
+    var images = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/d3.jpg'];
+    var currentIndex = 0;
+    var imageElement = document.getElementById("slideshow");
+
+    function changeImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        imageElement.src = images[currentIndex];
+    }
+
+    function redirectToMinionsPage() {
+        window.location.href = "minions.html";
+    }
+
+    setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
+</script>
 
 
 
+<p>         
+</p>   
 
-
- <p>
 
 <head>
     <style>
@@ -121,6 +154,7 @@ JUST👇🏼NEW!
 </script>
 
 
+ <p>
 </p> 
 __________
 <p>
