--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ JUST👇🏼NEW!
 </head>
 
 <body>
-    <a href="minions.html">
+    <a href="deadpool.php">
         <img id="slideshow" src="https://123.vitaforas.de/p1.jpg" onclick="redirectToMinionsPage()" />
     </a>
 </body>
@@ -115,7 +115,7 @@ JUST👇🏼NEW!
     }
 
     function redirectToMinionsPage() {
-        window.location.href = "minions.html";
+        window.location.href = "deadpool.php";
     }
 
     setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
@@ -126,6 +126,40 @@ JUST👇🏼NEW!
 <p>         
 </p>   
 
+      
+
+<head>
+    <style>
+        #slideshow {
+            width: 300px; /* Definiert die Breite des Bildes */
+            height: auto; /* Automatische Höhe basierend auf der Breite */
+        }
+    </style>
+</head>
+
+<body>
+    <a href="minions.html">
+        <img id="slideshow" src="https://123.vitaforas.de/ich4.jpg" onclick="redirectToMinionsPage()" />
+    </a>
+</body>
+
+<script>
+    var images = ['https://123.vitaforas.de/ich1.jpg', 'https://123.vitaforas.de/minions2.jpg',
+ 'https://123.vitaforas.de/minions3.jpg', 'https://123.vitaforas.de/ich4.jpg'];
+    var currentIndex = 0;
+    var imageElement = document.getElementById("slideshow");
+
+    function changeImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        imageElement.src = images[currentIndex];
+    }
+
+    function redirectToMinionsPage() {
+        window.location.href = "minions.html";
+    }
+
+    setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
+</script>
 
  <p>
 </p> 
