Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@ JUST👇🏼NEW!
 
 <body>
     <a href="minions.html">
-        <img id="slideshow" src="https://123.vitaforas.de/ich4.jpg" onclick="redirectToMinionsPage()" />
+        <img id="slideshow" src="ich4.jpg" onclick="redirectToMinionsPage()" />
     </a>
 </body>
 
 <script>
-    var images = ['https://123.vitaforas.de/ich1.jpg', 'https://123.vitaforas.de/minions2.jpg',
- 'https://123.vitaforas.de/minions3.jpg', 'https://123.vitaforas.de/ich4.jpg'];
+    var images = ['ich1.jpg', 'minions2.jpg',
+ 'minions3.jpg', 'ich4.jpg'];
     var currentIndex = 0;
     var imageElement = document.getElementById("slideshow");
 
