Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@ JUST👇🏼NEW!
 
         
        
-
 <head>
     <style>
         #slideshow {
@@ -99,7 +98,7 @@ JUST👇🏼NEW!
 </head>
 
 <body>
-    <a href="deadpool.php">
+    <a href="minions.html">
         <img id="slideshow" src="https://123.vitaforas.de/p1.jpg" onclick="redirectToMinionsPage()" />
     </a>
 </body>
@@ -115,12 +114,11 @@ JUST👇🏼NEW!
     }
 
     function redirectToMinionsPage() {
-        window.location.href = "deadpool.php";
+        window.location.href = "minions.html";
     }
 
     setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
 </script>
-
 
 
 <p>         
