Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ JUST👇🏼NEW!
 
 <body>
     <a href="minions.html">
-        <img id="slideshow" src="i4.jpg" onclick="redirectToMinionsPage()" />
+        <img id="slideshow" src="ich1.jpg" onclick="redirectToMinionsPage()" />
     </a>
 </body>
 
