Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ JUST👇🏼NEW!
 </head>
 
 <body>
-    <a href="minions.html">
+    <a href="deadpool.html">
         <img id="slideshow" src="https://123.vitaforas.de/p1.jpg" onclick="redirectToMinionsPage()" />
     </a>
 </body>
@@ -114,7 +114,7 @@ JUST👇🏼NEW!
     }
 
     function redirectToMinionsPage() {
-        window.location.href = "minions.html";
+        window.location.href = "deadpool.html";
     }
 
     setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
