Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ JUST👇🏼NEW!
 
 
         
-       
+   <div>    
 <head>
     <style>
         #slideshow {
@@ -119,7 +119,7 @@ JUST👇🏼NEW!
 
     setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
 </script>
-
+</div>
 
 <p>         
 </p>   
