Aktualisieren von deadpool.html

--- a/deadpool.html
+++ b/deadpool.html
@@ -77,7 +77,7 @@
 <img src="http://123.vitaforas.de/p2.jpg" alt="ich 2" width="30%" height="auto" name="deadpool 2"></a>
 
  <a href="http://123.vitaforas.de/p3.mp4">
-<img src="minions3.jpg" alt="deadpool 3" width="30%" height="auto" name="deadpool 3 "></a>
+<img src="http://123.vitaforas.de/p3.jpg" alt="deadpool 3" width="30%" height="auto" name="deadpool 3 "></a>
 
 <p>         
 </p>   
