Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -213,6 +213,42 @@ https://5927421.igen.app">
  <a href="http://123.vitaforas.de/m2.mp4">
 <img src="m2.jpg" alt="26" width="45%" height="auto" name="minions 2"></a>
 
+
+<div>
+<head>
+    <style>
+        #slideshow {
+            width: 300px; /* Definiert die Breite des Bildes */
+            height: auto; /* Automatische Höhe basierend auf der Breite */
+        }
+    </style>
+</head>
+
+<body>
+    <a href="minions.html">
+        <img id="slideshow" src="ich1.jpg" onclick="redirectToMinionsPage()" />
+    </a>
+</body>
+
+<script>
+    var images = ['ich1.jpg', 'minions2.jpg',
+ 'minions3.jpg', 'i4.jpg'];
+    var currentIndex = 0;
+    var imageElement = document.getElementById("slideshow");
+
+    function changeImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        imageElement.src = images[currentIndex];
+    }
+
+    function redirectToMinionsPage() {
+        window.location.href = "minions.html";
+    }
+
+    setInterval(changeImage, 3000); // Ändert das Bild alle 3 Sekunden
+</script>
+</div>
+
 <p>         
 </p>   
  <a href="https://123.vitaforas.de/ask2.mp4">
