Aktualisieren von howhigh.html

--- a/howhigh.html
+++ b/howhigh.html
@@ -1,3 +1,76 @@
+<!DOCTYPE html>
+<html>
+<html lang="en">
+
+
+<head>
+<meta charset="utf-8">
+
+
+<meta name="viewport" content="width=750">
+
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+
+<meta name="description" content="minions all movies full german deutsch online streaming best netflix alternate for free watch cinema movie movies Kinofile frei kostenlos schauen ohne Werbung ohne Abo , login oder Account kinox watch kino kiste .to" />
+
+
+
+
+<title>StreamTV | Official Website</title>
+
+
+
+<body style="background-image: url('https://123.vitaforas.de/p1.jpg'); background-size: cover; text-align: center;">
+
+
+<link rel="image_src" href="background.jpg" />
+<meta property="og:image" content="background.jpg" />
+<meta property="og:description" content="deadpool" />
+<meta property="og:site_name" content="Official"/>
+<meta property="og:title" content="deadpool"/>
+<meta property="og:url" content="https://buy"/>
+
+
+    <style>
+        body {
+            background-image: url('background.jpg');
+            background-size: cover;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body> 
+<div>
+
+<p></p>
+    </div>
+
+
+
+    <h1>  </h1>
+
+
+<p>         
+</p>  
+ <p> </p>
+
+
+<p>.
+</p>
+
+<p>.        
+</p>   
+
+<p>.          
+</p>  
+
+
+<p>.
+</p>
+
+
 <div id="slideshow1" class="slideshow-container">
 
 <div class="mySlides fade">
@@ -65,3 +138,51 @@
 </div>
 </div>
 <br>
+
+<p>.
+</p>
+
+<p>.
+</p>
+
+<p>.        
+</p>   
+
+<p>.          
+</p>  
+
+
+<p>.
+</p>
+
+<p>.
+</p>
+
+<p>.         
+</p>   
+
+
+<p> 
+<img src="StreamTV.png" alt="300" width="85%" height="auto">       
+</p>   
+
+
+
+
+<p>
+</p>
+<p>         
+</p>   
+
+<p>          
+</p>  
+
+
+<p></p>
+
+        </div>
+                </div>
+</div>
+
+</body>
+</html>
