--- a/howhigh.html
+++ b/howhigh.html
@@ -75,19 +75,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
+  <img src="https://123.vitaforas.de/p1.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_fjords_wide.jpg" style="width:100%">
+  <img src="https://123.vitaforas.de/p1.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <img src="https://123.vitaforas.de/p1.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
@@ -111,19 +111,19 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="img_nature_wide.jpg" style="width:100%">
+  <img src="https://123.vitaforas.de/p1.jpg" style="width:100%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="img_fjords_wide.jpg" style="width:100%">
+  <img src="https://123.vitaforas.de/p1.jpg" style="width:100%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="img_mountains_wide.jpg" style="width:100%">
+  <img src="https://123.vitaforas.de/p1.jpg" style="width:100%">
   <div class="text">Caption Three</div>
 </div>
 
