--- a/howhigh.html
+++ b/howhigh.html
@@ -70,72 +70,65 @@
 <p>.
 </p>
 
-
 <div id="slideshow1" class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
-  <div class="text">Caption Text</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
+    <div class="text">Caption Text</div>
+  </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="https://123.vitaforas.de/p2.jpg" style="width:30%">
-  <div class="text">Caption Two</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="https://123.vitaforas.de/p2.jpg" style="width:30%">
+    <div class="text">Caption Two</div>
+  </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
-  <div class="text">Caption Three</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
+    <div class="text">Caption Three</div>
+  </div>
 
-<a class="prev" onclick="plusSlides(-1,slideshow1)">&#10094;</a>
-<a class="next" onclick="plusSlides(1, slideshow1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, this.parentNode)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, this.parentNode)">&#10095;</a>
 
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1, slideshow1)"></span> 
-  <span class="dot" onclick="currentSlide(2, slideshow1)"></span> 
-  <span class="dot" onclick="currentSlide(3, slideshow1)"></span> 
-</div>
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1, this.parentNode)"></span> 
+    <span class="dot" onclick="currentSlide(2, this.parentNode)"></span> 
+    <span class="dot" onclick="currentSlide(3, this.parentNode)"></span> 
+  </div>
 </div>
 <br>
 
-
-
-
-
 <div id="slideshow2" class="slideshow-container">
 
-<div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
-  <div class="text">Caption Text</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
+    <div class="text">Caption Text</div>
+  </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="https://123.vitaforas.de/p2.jpg" style="width:30%">
-  <div class="text">Caption Two</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="https://123.vitaforas.de/p2.jpg" style="width:30%">
+    <div class="text">Caption Two</div>
+  </div>
 
-<div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
-  <div class="text">Caption Three</div>
-</div>
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
+    <div class="text">Caption Three</div>
+  </div>
 
-<a class="prev" onclick="plusSlides(-1, this.parentNode)">&#10094;</a>
-<a class="next" onclick="plusSlides(1, this.parentNode)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, this.parentNode)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, this.parentNode)">&#10095;</a>
 
-
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1, slideshow2)"></span> 
-  <span class="dot" onclick="currentSlide(2, slideshow2)"></span> 
-  <span class="dot" onclick="currentSlide(3, slideshow2)"></span> 
-</div>
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1, this.parentNode)"></span> 
+    <span class="dot" onclick="currentSlide(2, this.parentNode)"></span> 
+    <span class="dot" onclick="currentSlide(3, this.parentNode)"></span> 
+  </div>
 </div>
 <br>
 
