--- a/howhigh.html
+++ b/howhigh.html
@@ -167,6 +167,34 @@
 <p>         
 </p>   
 
+<script>
+var slideIndex = 1;
+showSlides(1, 'slideshow1');
+showSlides(1, 'slideshow2');
+
+function plusSlides(n, slideshowId) {
+  showSlides(slideIndex += n, slideshowId);
+}
+
+function currentSlide(n, slideshowId) {
+  showSlides(slideIndex = n, slideshowId);
+}
+
+function showSlides(n, slideshowId) {
+  var i;
+  var slideshow = document.getElementById(slideshowId);
+  var slides = slideshow.getElementsByClassName("mySlides");
+  
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  
+  slides[slideIndex-1].style.display = "block";
+}
+
 <p>          
 </p>  
 
@@ -177,5 +205,6 @@
                 </div>
 </div>
 
+</script>
 </body>
 </html>
