--- a/howhigh.html
+++ b/howhigh.html
@@ -69,9 +69,7 @@
 
 <p>
 </p>
-
 <div id="slideshow1" class="slideshow-container">
-
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
@@ -86,23 +84,22 @@
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
+    <img src="https://123.vitaforas.de/p3.jpg" style="width:30%">
     <div class="text">Caption Three</div>
   </div>
 
-  <a class="prev" onclick="plusSlides(-1, this.parentNode)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, this.parentNode)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 'slideshow1')">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 'slideshow1')">&#10095;</a>
 
   <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1, this.parentNode)"></span> 
-    <span class="dot" onclick="currentSlide(2, this.parentNode)"></span> 
-    <span class="dot" onclick="currentSlide(3, this.parentNode)"></span> 
+    <span class="dot" onclick="currentSlide(1, 'slideshow1')"></span> 
+    <span class="dot" onclick="currentSlide(2, 'slideshow1')"></span> 
+    <span class="dot" onclick="currentSlide(3, 'slideshow1')"></span> 
   </div>
 </div>
 <br>
 
 <div id="slideshow2" class="slideshow-container">
-
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
@@ -117,25 +114,25 @@
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
+    <img src="https://123.vitaforas.de/p3.jpg" style="width:30%">
     <div class="text">Caption Three</div>
   </div>
 
-  <a class="prev" onclick="plusSlides(-1, this.parentNode)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, this.parentNode)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 'slideshow2')">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 'slideshow2')">&#10095;</a>
 
   <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1, this.parentNode)"></span> 
-    <span class="dot" onclick="currentSlide(2, this.parentNode)"></span> 
-    <span class="dot" onclick="currentSlide(3, this.parentNode)"></span> 
+    <span class="dot" onclick="currentSlide(1, 'slideshow2')"></span> 
+    <span class="dot" onclick="currentSlide(2, 'slideshow2')"></span> 
+    <span class="dot" onclick="currentSlide(3, 'slideshow2')"></span> 
   </div>
 </div>
 <br>
 
-<p>
+<p>            
 </p>
 
-<p>
+<p>             
 </p>
 
 <p>       
@@ -144,23 +141,18 @@
 <p>          
 </p>  
 
-
-<p>
+<p>         
 </p>
 
-<p>
+<p>         
 </p>
 
 <p>         
 </p>   
 
-
 <p> 
-<img src="StreamTV.png" alt="300" width="85%" height="auto">       
+  <img src="StreamTV.png" alt="300" width="85%" height="auto">       
 </p>   
-
-
-
 
 <p>
 </p>
@@ -182,29 +174,19 @@ function currentSlide(n, slideshowId) {
 
 function showSlides(n, slideshowId) {
   var i;
+  var slideIndex = 1;
   var slideshow = document.getElementById(slideshowId);
   var slides = slideshow.getElementsByClassName("mySlides");
-  
+
   if (n > slides.length) {slideIndex = 1}
   if (n < 1) {slideIndex = slides.length}
-  
+
   for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
+    slides[i].style.display = "none";
   }
-  
-  slides[slideIndex-1].style.display = "block";
+
+  slides[slideIndex - 1].style.display = "block";
 }
-
-<p>          
-</p>  
-
-
-<p></p>
-
-        </div>
-                </div>
-</div>
-
 </script>
 </body>
 </html>
