--- a/howhigh.html
+++ b/howhigh.html
@@ -68,8 +68,7 @@
 
 
 <p>
-</p>
-<div id="slideshow1" class="slideshow-container">
+</p><div id="slideshow1" class="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
@@ -97,96 +96,21 @@
     <span class="dot" onclick="currentSlide(3, 'slideshow1')"></span> 
   </div>
 </div>
-<br>
-
-<div id="slideshow2" class="slideshow-container">
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 3</div>
-    <img src="https://123.vitaforas.de/p1.jpg" style="width:30%">
-    <div class="text">Caption Text</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 3</div>
-    <img src="https://123.vitaforas.de/p2.jpg" style="width:30%">
-    <div class="text">Caption Two</div>
-  </div>
-
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 3</div>
-    <img src="https://123.vitaforas.de/p3.jpg" style="width:30%">
-    <div class="text">Caption Three</div>
-  </div>
-
-  <a class="prev" onclick="plusSlides(-1, 'slideshow2')">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 'slideshow2')">&#10095;</a>
-
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1, 'slideshow2')"></span> 
-    <span class="dot" onclick="currentSlide(2, 'slideshow2')"></span> 
-    <span class="dot" onclick="currentSlide(3, 'slideshow2')"></span> 
-  </div>
-</div>
-<br>
-
-<p>            
-</p>
-
-<p>             
-</p>
-
-<p>       
-</p>   
-
-<p>          
-</p>  
-
-<p>         
-</p>
-
-<p>         
-</p>
-
-<p>         
-</p>   
-
-<p> 
-  <img src="StreamTV.png" alt="300" width="85%" height="auto">       
-</p>   
-
-<p>
-</p>
-<p>         
-</p>   
-
 <script>
-var slideIndex = 1;
+var slideIndex1 = 1;
 showSlides(1, 'slideshow1');
-showSlides(1, 'slideshow2');
 
 function plusSlides(n, slideshowId) {
-  showSlides(slideIndex += n, slideshowId);
+  showSlides(slideIndex1 += n, slideshowId);
 }
 
 function currentSlide(n, slideshowId) {
-  showSlides(slideIndex = n, slideshowId);
+  showSlides(slideIndex1 = n, slideshowId);
 }
 
-function showSlides(n, slideshowId) {
-  var i;
-  var slideIndex = 1;
-  var slideshow = document.getElementById(slideshowId);
-  var slides = slideshow.getElementsByClassName("mySlides");
-
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-
-  slides[slideIndex - 1].style.display = "block";
-}
+setInterval(function() {
+  plusSlides(1, 'slideshow1');
+}, 2000); // Change image every 2 seconds
 </script>
 </body>
 </html>
