Aktualisieren von howhigh.html

--- a/howhigh.html
+++ b/howhigh.html
@@ -79,12 +79,12 @@
             <img class="slideshow" src="ich1.jpg" onclick="redirectToMinionsPage()" />
         </a>
         <a href="minions.html">
-            <img class="slideshow" src="ich1.jpg" onclick="redirectToMinionsPage()" />
+            <img class="slideshow" src="ich4.jpg" onclick="redirectToMinionsPage()" />
         </a>
     </div>
 
     <script>
-        var images = ['ich1.jpg', 'minions2.jpg', 'minions3.jpg', 'i4.jpg'];
+        var images = ['minions3.jpg', 'minions2.jpg', 'minions3.jpg', 'ich4.jpg'];
         var currentIndex = 0;
         var imageElements = document.getElementsByClassName("slideshow");
 
