Aktualisieren von howhigh.html

--- a/howhigh.html
+++ b/howhigh.html
@@ -76,10 +76,10 @@
 <body>
     <div class="slideshow-container">
         <a href="minions.html">
-            <img class="slideshow" src="ich1.jpg" onclick="redirectToMinionsPage()" />
-        </a>
-        <a href="minions.html">
             <img class="slideshow" src="ich4.jpg" onclick="redirectToMinionsPage()" />
+        </a>
+        <a href="deadpool.html">
+            <img class="slideshow" src="p1.jpg" onclick="redirectToMinionsPage()" />
         </a>
     </div>
 
