Aktualisieren von sammlungen.html

--- a/sammlungen.html
+++ b/sammlungen.html
@@ -1,64 +1,16 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
-
-
 <head>
-<meta charset="utf-8">
-
-
-<meta name="viewport" content="width=750">
-
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="icon" href="favicon.ico" type="image/x-icon">
-
-<meta name="description" content="how high all movies full german deutsch online streaming best netflix alternate for free watch cinema movie movies Kinofile frei kostenlos schauen ohne Werbung ohne Abo , login oder Account kinox watch kino kiste .to" />
-
-
-
-
-<title>StreamTV | Official Website</title>
-
-
-
-<body style="background-image: url('https://123.vitaforas.de/p1.jpg'); background-size: cover; text-align: center;">
-
-
-<link rel="image_src" href="background.jpg" />
-<meta property="og:image" content="background.jpg" />
-<meta property="og:description" content="deadpool" />
-<meta property="og:site_name" content="Official"/>
-<meta property="og:title" content="deadpool"/>
-<meta property="og:url" content="https://buy"/>
-
-
-    <style>
-        body {
-            background-image: url('background.jpg');
-            background-size: cover;
-            text-align: center;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Slideshow</title>
 </head>
-
-<body> 
-<div>
-
-<p></p>
-    </div>
-
-
-
-    <h1>  </h1>
-
-
-<p>         
-</p>  
-
- <p>
-</p>
-
-<script>
+<body>
+    <img class="slideshow" alt="Minions Slideshow">
+    <img class="slideshow" alt="Deadpool Slideshow">
+    
+    <script>
     var imagesMinions = ['minions3.jpg', 'minions2.jpg', 'ich4.jpg'];
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
