Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -46,11 +46,11 @@
     <img class="slideshow" alt="Deadpool Slideshow">
     
     <script>
-    var imagesMinions = ['minions3.jpg', 'minions2.jpg', 'ich4.jpg'];
+    var imagesMinions = ['minions3.jpg', 'minions2.jpg', 'm2.jpg'];
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
-    var imagesDeadpool = ['p1.jpg', 'p2.jpg', 'p3.jpg'];
+    var imagesDeadpool = ['p1.jpg', 'm2.jpg', 'p3.jpg'];
     var currentIndexDeadpool = 0;
     var imageElementsDeadpool = document.getElementsByClassName("slideshow")[1];
 
