Aktualisieren von test.html

--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
-    var imagesDeadpool = ['p1.jpg', 'd2.jpg', 'p3.jpg'];
+    var imagesDeadpool = ['d1.jpg', 'd2.jpg', 'if.jpg'];
     var currentIndexDeadpool = 0;
     var imageElementsDeadpool = document.getElementsByClassName("slideshow")[1];
 
