--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
-    var imagesDeadpool = ['d1.jpg', 'd2.jpg', 'if.jpg'];
+    var imagesDeadpool = ['https://123.vitaforas.de/p1.jpg', 'https://123.vitaforas.de/p2.jpg', 'https://123.vitaforas.de/d3.jpg'];
     var currentIndexDeadpool = 0;
     var imageElementsDeadpool = document.getElementsByClassName("slideshow")[1];
 
