--- a/test.html
+++ b/test.html
@@ -46,7 +46,7 @@
     <img class="slideshow" alt="Deadpool Slideshow">
     
     <script>
-    var imagesMinions = ['minions3.jpg', 'minions2.jpg', 'i1.png', 'm2.jpg'];
+    var imagesMinions = ['i1.png', 'minions2.jpg', 'minions3.jpg', 'm2.jpg'];
     var currentIndexMinions = 0;
     var imageElementsMinions = document.getElementsByClassName("slideshow")[0];
 
